--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tw.edu.ym.guid</groupId>
 	<artifactId>guid-client</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 
 	<build>
 		<plugins>
@@ -27,6 +27,7 @@
 						</goals>
 						<configuration>
 							<finalName>${project.artifactId}-${project.version}</finalName>
+							<createDependencyReducedPom>false</createDependencyReducedPom>
 						</configuration>
 					</execution>
 				</executions>
